Fixed hamburger menu not opening

--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,13 @@
             ],
             "styles": [
               "node_modules/bulma/css/bulma.css",
+              "node_modules/font-awesome/css/font-awesome.min.css",
               "src/styles.sass"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "src/app/components/navbar/nav-active.js"
+            ]
           },
           "configurations": {
             "production": {
