--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "src/app/components/events/populate-events.js"
+              "src/app/components/events/populate-events.js",
+              "src/app/components/sunday-reading/sunday-reading.js"
             ]
           },
           "configurations": {
