--- a/package.json
+++ b/package.json
@@ -13,24 +13,26 @@
   "dependencies": {
     "@angular/animations": "~8.1.1",
     "@angular/common": "~8.1.1",
-    "@angular/compiler": "~8.1.1",
+    "@angular/compiler": "^8.1.3",
     "@angular/core": "~8.1.1",
     "@angular/forms": "~8.1.1",
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
     "@fortawesome/angular-fontawesome": "^0.4.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0",
     "bootstrap": "^4.3.1",
     "bulma": "^0.7.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "popper.js": "^1.14.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.1",
-    "@angular/cli": "^8.3.2",
+    "@angular-devkit/build-angular": "^0.803.8",
+    "@angular/cli": "^8.3.8",
     "@angular/compiler-cli": "~8.1.1",
     "@angular/language-service": "~8.1.1",
     "@types/jasmine": "~3.3.8",
